ARIES-216
git-svn-id: https://svn.apache.org/repos/asf/incubator/aries/trunk/jmx@919521 13f79535-47bb-0310-9956-ffa450edef68